# UlamSpiral

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
UlamSpiral/: CMakeLists.txt
UlamSpiral/src/: main.cpp
src/: main.cpp
